--- a/RBC.html
+++ b/RBC.html
@@ -5,7 +5,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="apple-touch-icon" href="img/icon.png">
 	<meta name="msapplication-tap-highlight" content="no">
-	<title>RitualBeastChecker</title>
+	<title>RBChecker</title>
 	<link rel="stylesheet" href="css/ress.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
