--- a/RBC.html
+++ b/RBC.html
@@ -13,6 +13,15 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CQG5DBFX7Z"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
+
+	gtag('config', 'G-CQG5DBFX7Z');
+</script>
 <body>
 	<section>
 		<div class="mainCanvas">
